...
//           //   width: double.infinity,
//           //   child: Column(
//           //     mainAxisAlignment: MainAxisAlignment.center,
//           //     children: [
//           //       const Center(
//           //         child: Text(
//           //           "Welcome",
//           //           style: TextStyle(
//           //             fontSize: 25,
//           //             fontWeight: FontWeight.bold,
//           //             color: Colors.white,
//           //           ),
//           //         ),
...
